syntax = "proto3";

option csharp_namespace = "Protos.Entries";

package entries;

import "Entities/Entries/CreateEntryRequest.proto";
import "Entities/Entries/CreateEntryResponse.proto";
import "Entities/Entries/GetEntriesByActionResponse.proto";
import "Entities/Entries/GetAllEntriesResponse.proto";

service Entries {
  rpc createEntry (CreateEntryRequest) returns (CreateEntryResponse);
  
  rpc getEntriesByAction (GetEntriesByActionRequest) returns (getentriesbyactionresponse.GetEntriesByActionResponse);
  
  rpc getAllEntries (GetAllEntriesRequest) returns (getallentriesresponse.GetAllEntriesResponse);
  
  rpc deleteEntry (DeleteEntryRequest) returns (DeleteEntryResponse);
}

message GetEntriesByActionRequest {
  string ActionId = 1;
  bool IncludeAlreadyAccepted = 2;
}

message GetAllEntriesRequest {
  
}

message DeleteEntryRequest {
  string Id = 1;
}

message DeleteEntryResponse {
  
}

